Fixed dark mode

--- a/common/common.scss
+++ b/common/common.scss
@@ -42,10 +42,6 @@ input[type="color"]:focus,
   outline: none;
 }
 
-{
-	background-color: revert;
-}
-
 .d-header {
   height: 5em;
   box-shadow: none;
